--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,28 +9,32 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.SEND_SMS" />
-    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
-<!--    <uses-permission android:name="android.permission-group.CALL_LOG" />-->
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" /> <!-- <uses-permission android:name="android.permission-group.CALL_LOG" /> -->
     <uses-permission android:name="android.permission.CALL_PHONE" />
-
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_firebase_logo"
-        android:label="@string/app_name"
+        android:label="@string/firebase_login"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_firebase_logo"
         android:supportsRtl="true"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
-        <activity android:name=".InformationPage"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".TermsAndCondition"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".RecordActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".RegisterLoginPage"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".MainActivity"
+        <activity android:name=".Record2Activity"></activity>
+        <activity
+            android:name=".InformationPage"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".TermsAndCondition"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".RecordActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".RegisterLoginPage"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
